--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "lint": "eslint  src/**/*.js",
     "dev": "webpack --config webpack.config.js",
     "start": "webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --passWithNoTests"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +16,14 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "eslint": "^6.0.0",
+    "eslint-loader": "^3.0.3",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "prettier": "^1.17.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
