--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync-webpack-plugin": "^2.2.2",
     "eslint": "^6.0.0",
     "eslint-loader": "^3.0.3",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "prettier": "^1.17.0",
