--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^3.4.1",
     "eslint": "^6.0.0",
     "eslint-loader": "^3.0.3",
     "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.0",
     "prettier": "^1.17.0",
+    "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
+    "webpack-clean-obsolete-chunks": "^0.4.0",
     "webpack-cli": "^3.3.10"
   }
 }
