--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint  src/**/*.js",
     "dev": "webpack --config webpack.config.js",
     "start": "webpack --config webpack.config.js",
+    "prod": "webpack --config webpack.prod.js",
     "test": "jest --verbose --passWithNoTests"
   },
   "keywords": [],
@@ -20,6 +21,8 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.4.1",
     "eslint": "^6.0.0",
     "eslint-loader": "^3.0.3",
@@ -32,7 +35,6 @@
     "prettier": "^1.17.0",
     "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
-    "webpack-clean-obsolete-chunks": "^0.4.0",
     "webpack-cli": "^3.3.10"
   }
 }
