--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "lint": "eslint  src/**/*.js",
     "dev": "webpack --config webpack.config.js",
     "start": "webpack --config webpack.config.js",
-    "prod": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js",
     "test": "jest --verbose --passWithNoTests"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
@@ -22,7 +21,6 @@
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^6.0.3",
     "css-loader": "^3.4.1",
     "eslint": "^6.0.0",
     "eslint-loader": "^3.0.3",
@@ -32,9 +30,12 @@
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.17.0",
     "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.3.2",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2"
   }
 }
