--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
@@ -34,6 +35,7 @@
     "prettier": "^1.17.0",
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.3.2",
+    "url-loader": "^4.1.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2"
