--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "sweetalert2": "^9.10.12"
   }
 }
